<resources>
    <!-- Main strings -->
    <string name="app_name" translatable="false">Travel Manager</string>
    <string name="app_name_caps" translatable="false">TRAVEL MANAGER</string>

    <!-- Main menu -->
    <string name="menu_app">App</string>
    <string name="menu_about_app">About app</string>
    <string name="menu_change_theme">Change theme</string>
    <string name="menu_choose_language">Choose language</string>
    <string name="footer_text" translatable="false">Travel Manager, 2021</string>

    <!-- List fragment -->
    <string name="states_label">United States</string>
    <string name="states_label_description">Explore all the beauties of America!</string>

    <!-- Attractions fragment -->
    <string name="attractions_label">Attractions</string>
    <string name="attractions_label_description">Find out more about this State!</string>

    <!-- Content descriptions -->
    <string name="open_menu">Open menu</string>

    <!-- About app fragment -->
    <string name="description_first_paragraph">Are you planning a trip to the United States of America?
        Or do you just want to learn more about this beautiful country?
        \n\nWelcome to Travel Manager!
        You can get acquainted with each State of America
        and study in more detail the most popular attractions
        or just beautiful places of each State.
    </string>

    <string name="description_second_paragraph">
        Each window is made in an elegant black-and-white style,
        which is complemented by colorful images of both the states themselves and their attractions.
        \n\nI hope that you will enjoy using my application.
    </string>

    <string name="description_third_paragraph">Sincerely, the developer of Travel Manager!</string>

    <string name="i_got_it">I got it!</string>

    <!-- Choose theme dialog -->
    <string name="choose_theme_dialog_title">Choose theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_default_theme">System default</string>

    <!-- Choose language dialog -->
    <string name="choose_language_dialog_title">Choose language</string>
    <string name="english_language">English</string>
    <string name="russian_language">Russian</string>

    <!-- Detail fragment -->
    <string name="detail_basic_information_paragraph">Basic information</string>
    <string name="detail_history_paragraph">History</string>
    <string name="detail_location_paragraph">Location</string>
    <string name="temperature_now">"Temperature now: "</string>
</resources>