<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".description.DescriptionFragment">

    <ImageView
        android:id="@+id/ivAttraction"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <TextView
                android:id="@+id/mainParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_basic_information_paragraph"
                android:textColor="@color/text_secondary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/golos_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvBasicInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:text="bla bla bla basic"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainParagraph" />

            <TextView
                android:id="@+id/historyParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_history_paragraph"
                android:textColor="@color/text_secondary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/golos_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBasicInfo"/>

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:text="bla bla bla history"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/historyParagraph" />

            <TextView
                android:id="@+id/locationParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_location_paragraph"
                android:textColor="@color/text_secondary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/golos_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHistory"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:text="bla bla bla location"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationParagraph" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_description_layout"
        app:layout_constraintBottom_toBottomOf="@+id/ivAttraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvAttraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/golos_semibold"
            android:padding="16dp"
            android:text="This place"
            android:textColor="@color/text_primary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/golos_semibold"
            android:padding="16dp"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>